fix: Overflow in small screen size
- Add media query

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 
 .main {
   background-image: url("./assets/container_bg.png");
-  padding: 4rem 2rem;
+  padding: 4rem 0;
   min-height: 100vh;
 }
 
@@ -89,4 +89,10 @@
   border-radius: 4px;
   line-height: 18px;
   text-align: center;
+}
+
+@media screen and (min-width: 375px) {
+  .main {
+    padding: 4rem 2rem;
+  }
 }
